--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 				that's currently bundled with hibernate-parent -->
 			<version>1.5.8</version>
 		</dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
