--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
 		<servletapi.version>3.1.0</servletapi.version>
 	</properties>
 
-
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -75,8 +74,12 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency> -->
 	</dependencies>
-
 	<build>
 		<finalName>gk1</finalName>
 		<pluginManagement>
@@ -129,6 +132,7 @@
 				</plugin>
 
 			</plugins>
-			</pluginManagement>
+		</pluginManagement>
+
 	</build>
 </project>
